# ros_winml_arm

./: .gitmodules  LICENSE  README.md  catkin_make_demo.bat  demo.bat  demo.rosinstall  package.xml
UWPApp/: embedded_world.sln
UWPApp/embedded_world/: App.xaml  App.xaml.cs  DetectedObjectPose.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  embedded_world.csproj
UWPApp/embedded_world/Properties/: AssemblyInfo.cs
k4a_arm_support/: CMakeLists.txt  package.xml
k4a_arm_support/calibration/: azure_kinect.yaml  lifecam_studio.yaml  ost.yaml
k4a_arm_support/launch/: aruco_demo.launch  calibrate.launch  cameracheck.launch  gripper.launch  k4a_demo.launch  k4a_fake.launch  urdf.launch
k4a_arm_support/log/: rosconsole.conf
k4a_arm_support/meshes/: azure_kinect.dae  k4a.stl  k4a_mount.dae  k4a_mount.stl  lifecam_mount.dae  lifecam_mount.stl
k4a_arm_support/src/: k4a_arm_support.cpp
k4a_arm_support/urdf/: UR3_K4A.xacro  UR3_Lifecam.xacro  workcell.xacro
k4a_arm_support/viz/: visualize.rviz
launch/: calibrate.launch  k4a_demo.launch  k4a_fake.launch
meshes/: k4a.dae
src/: k4a_arm_support.cpp
ur3_k4a-moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur3_k4a-moveit_config/config/: UR3_with_k4a.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
ur3_k4a-moveit_config/launch/: UR3_with_k4a_execution.launch  UR3_with_k4a_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
urdf/: K4A.xacro  workcell.xacro
