<?xml version="1.0"?>
<package format="2">
  <name>k4a_arm_support</name>
  <version>0.0.0</version>
  <description>The Support Package for the K4A Workcell package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lamadio@microsoft.com">Lou</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>eigen3</depend>
  <depend>ros_msft_onnx</depend>
  <depend>ros_msft_onnx_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>robotiq_2f_c2_gripper_visualization</depend>
  <depend>robotiq_2f_gripper_action_server</depend>
  <depend>robotiq_2f_gripper_control</depend>
  <depend>ur3_moveit_config</depend>
  <depend>rosbridge_server</depend>
  <depend>ur_description</depend>
  <depend>cv_camera</depend>

  <test_depend>rosunit</test_depend>
</package>
